fix forum wrap buttons

--- a/hdf/monocle/monocle.css
+++ b/hdf/monocle/monocle.css
@@ -387,6 +387,9 @@ td.label {
 #user .request_table {
   overflow: auto;
 }
+#forums .colhead_dark {
+  word-break: break-word;
+}
 /*@media (min-width: 1921px){
 .thin {
 width: 80%
